<resources>
    <string name="app_name">MyContacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="cancel_add_contact">Cancel</string>
    <string name="save_add_contact">Save</string>
    <string name="add_contact_name">Name</string>
    <string name="add_contact_phone">Phone Number</string>
    <string name="add_contact_email">E-Mail</string>
    <string name="hide_action_bar">Hide Menu</string>
    <string name="sort_fn">Sort by First Name</string>
    <string name="sort_ln">Sort by Last Name</string>
    <string name="sort_em">Sort by E-Mail</string>
    <string name="sort_num">Sort by Phone Number</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="contact_saved">Contact Saved</string>
    <string name="contact_deleted">Contact Deleted</string>
    <string name="new_contact_info">Enter New Contact Information</string>
    <string name="modify_contact">Modify Contact</string>
    <string name="contact_name_blank">Contact Name Blank</string>
</resources>
